[package]
name = "moai_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"